Wed Jul 14 09:47:31 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/IDL3_to_XMI/IDL3_to_XMI_visitor.h:
        * tools/IDL3_to_XMI/IDL3_to_XMI_visitor.cpp:

         Memory leak fixes.

        * tools/XML/XercesString.h:
        * tools/XML/XercesString.cpp:

          Added a reset method to release memory on demand.

Wed Jul 14 09:45:59 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>

        * bin/ciao_tests.lst
        Add AMI4CCM test GetComp.

Wed Jul 14 09:17:42 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl_T.cpp:

          Memory leak.

Tue Jul 13 19:38:35 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/RepositoryManager/RepositoryManager_Impl.cpp:

         Possible fix for compile error on scoreboard.

        * tools/XML/XML_Helper.tpp:

          Possible fix for segfault on scoreboard, as I can't reproduce in my
          workspace.

Tue Jul 13 15:11:35 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/PSAT/PSAT_Connector.idl:
          Removed include which we don't need anymore now the behaviour of -SS
          on tao_idl doesn't break the include chain anymore

Tue Jul 13 14:52:59 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/GetComp/Sender/GetComp_Sender_exec.cpp:
        Small changes in test criteria.

Tue Jul 13 10:30:59 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_XMI/be_util.cpp:
        * tools/IDL3_to_XMI/be_util.h:

          New files containing a utility class
          with static methods.

        * tools/IDL3_to_XMI/IDL3_TO_XMI.mpc:

          Added new files to the project.

        * tools/IDL3_to_XMI/be_global.cpp:
        * tools/IDL3_to_XMI/be_global.h:

          Factored out methods unrelated to global
          data storage and moved them to the new
          utility class.
