@@ -1,3 +1,9 @@
+Wed Jul 14 09:55:07 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * DAnCE/Plan_Launcher/Plan_Launcher.cpp:
+
+          Memory leak fix.
+
 Wed Jul 14 09:47:31 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * tools/IDL3_to_XMI/IDL3_to_XMI_visitor.h:
